The format is based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project **does not adhere to [Semantic Versioning](http://semver.org/spec/v2.0.0.html)**.

## [Unreleased]

### Added

### Changed

### Fixed

### Deprecated

### Removed

## [25.05] 2025-07-20

### Changed

* listupgrade.sh can be in /usr/local/sbin as well as /usr/share/scripts

### Fixed

* [Stretch] IS_MONITORINGCTL: absolute path for monitoringctl (/usr/local/bin not in PATH inside cron)

## [25.05] 2025-05-27

### Changed

* switch to evolibs-shell of Debian version checks
* IS_VARTMPFS does not check Trixie or later
* IS_LSBRELEASE only for Debian < 13

### Fixed

* IS_MONITORINGCTL: absolute path for monitoringctl (/usr/local/bin not in PATH inside cron)
* IS_NRPEPRESSURE: absolute path for monitoringctl (/usr/local/bin not in PATH inside cron)

## [25.04.2] 2025-04-23

### Changed

* IS_NOT_DEB822 + IS_NO_SIGNED_BY: disable check until most servers are fixed

## [25.04.1] 2025-04-23

### Changed

* IS_POSTFIX_IPV6_DISABLED: disable check until most servers are fixed

## [25.04] 2025-04-22

### Added

* Add IS_NOT_DEB822
* Add IS_NO_SIGNED_BY

## [25.03.3] 2025-03-27

### Added

* Add IS_POSTFIX_IPV6_DISABLED (#176)
* New checks for SSH config (#170)
* Verify backup directory existence

### Fixed

* IS_MONITORINGCTL: use full path of monitoringctl command (for when local bin is not in cron PATH) (#177)

## [25.03.2] 2025-03-21

### Added

* Add IS_NRPEPRESSURE check (#170)
* New checks for SSH config (#165)
* Verify backup directory existence

## [25.03.1] 2025-03-13

### Removed

* remove Stretch-specific code in main Linux script (#174)

## [25.03] 2025-03-12

### Added

* Add IS_HOMENOEXEC check (#172)
* Add IS_LXC_OPENSMTPD check (#173)
* Add IS_MONITORINGCTL check

### Changed

* fork evocheck for Debian 9 (Stretch)
* duke support (Debian 15)
* HARDWARERAIDTOOL: Add perccli and perccli2 support

## [25.01] 2025-01-23

### Changed
